--- a/ultah/index.html
+++ b/ultah/index.html
@@ -12,7 +12,7 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js"></script><script src="https://hbdkamu.feeldream.repl.co/script.js"></script>
   <script src="https://unpkg.com/typeit@8.7.0/dist/index.umd.js"></script>
   <script src="https://kit.fontawesome.com/4f3ce16e3e.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="assets/css/index.css">
+  <link rel="stylesheet" href="https://libra-lab26.github.io/assets/ultah/css/index.css">
   
 <head>
 <title>Barakallahu Fi Umrik</title>
