--- a/ultah/index.html
+++ b/ultah/index.html
@@ -88,6 +88,6 @@
      
    </div>
 
-<script src="assets/js/index.js"></script>
+<script src="https://libra-lab26.github.io/assets/ultah/js/index.js"></script>
 </body>
 </html>
