--- a/ultah/kado/index.html
+++ b/ultah/kado/index.html
@@ -230,6 +230,6 @@
       </style>
 		<body>
          <a href="../hadiah/">
-            <img id="kado" src="../assets/image/gifts.png" alt="kado">
+            <img id="kado" src="https://libra-lab26.github.io/assets/ultah/image/gifts.png" alt="kado">
       </a>
 		</body>
