--- a/ultah/hadiah/index.html
+++ b/ultah/hadiah/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js"></script>
 <script src="https://unpkg.com/typeit@8.7.0/dist/index.umd.js"></script>
- <link rel="stylesheet" href="../assets/css/hadiah.css">
+ <link rel="stylesheet" href="https://libra-lab26.github.io/assets/ultah/css/hadiah.css">
 
 </head>
 <body>
@@ -64,6 +64,6 @@
         <span class="ft">Wish You All The Best ✨</span></p>
     </blockquote></div>
   </div>
-<script src="../assets/js/hadiah.js"></script>
+<script src="https://libra-lab26.github.io/assets/ultah/js/hadiah.js"></script>
 </body>
 </html>
