--- a/ultah/hadiah/hadiah/index.html
+++ b/ultah/hadiah/hadiah/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hadiah</title>
-    <link rel="stylesheet" href="../../assets/css/hadiah1.css">
+    <link rel="stylesheet" href="https://libra-lab26.github.io/assets/ultah/css/hadiah1.css">
 </head>
 <body>
     <h1 style="color: rgb(251, 255, 0); text-align: center;">Barakallahu fi umrik</h1>
@@ -51,6 +51,6 @@
         <p id="typingText1" class="typing-text" style="color: #00ffcc;"></p>
         <p id="typingText2" class="typing-text" style="color: #ffcc00;"></p>
     </div>
-<script src="../../assets/js/hadiah1.js"></script>
+<script src="https://libra-lab26.github.io/assets/ultah/js/hadiah1.js"></script>
 </body>
 </html>
