--- a/ultah/hadiah/hadiah/index.html
+++ b/ultah/hadiah/hadiah/index.html
@@ -10,16 +10,16 @@
     <h1 style="color: rgb(251, 255, 0); text-align: center;">Barakallahu fi umrik</h1>
     <div class="slideshow-container">
         <div class="mySlides fade">
-            <img src="../../assets/image/ig1.jpg" style="width:100%; height:auto; object-fit:cover; border-radius: 10px; box-shadow: white 0px 0px 10px;">
+            <img src="https://libra-lab26.github.io/assets/ultah/image/ig1.jpg" style="width:100%; height:auto; object-fit:cover; border-radius: 10px; box-shadow: white 0px 0px 10px;">
         </div>
         <div class="mySlides fade">
-            <img src="../../assets/image/ig2.jpg" style="width:100%; height:auto; object-fit:cover; border-radius: 10px; box-shadow: white 0px 0px 10px;">
+            <img src="https://libra-lab26.github.io/assets/ultah/image/ig2.jpg" style="width:100%; height:auto; object-fit:cover; border-radius: 10px; box-shadow: white 0px 0px 10px;">
         </div>
         <div class="mySlides fade">
-            <img src="../../assets/image/ig3.jpg" style="width:100%; height:auto; object-fit:cover; border-radius: 10px; box-shadow: white 0px 0px 10px;">
+            <img src="https://libra-lab26.github.io/assets/ultah/image/ig3.jpg" style="width:100%; height:auto; object-fit:cover; border-radius: 10px; box-shadow: white 0px 0px 10px;">
         </div>
         <div class="mySlides fade">
-            <img src="../../assets/image/ig4.jpg" style="width:100%; height:auto; object-fit:cover; border-radius: 10px; box-shadow: white 0px 0px 10px;">
+            <img src="https://libra-lab26.github.io/assets/ultah/image/ig4.jpg" style="width:100%; height:auto; object-fit:cover; border-radius: 10px; box-shadow: white 0px 0px 10px;">
         </div>
 
         <a class="prev" onclick="plusSlides(-1)"">&#10094;</a>
@@ -33,7 +33,7 @@
         </div>
         <br>
         <div style="display: flex; justify-content: center; align-items: center;">
-            <a href="../../assets/file/IGCrack-by-Libra-ID.txt" download>
+            <a href="https://libra-lab26.github.io/assets/ultah/file/IGCrack-by-Libra-ID.txt" download>
                 <button style="padding: 10px 20px; font-size: 16px; color: white; background-color: #007BFF; border: none; border-radius: 5px; cursor: pointer;">
                     Download File
                 </button>
