--- a/tools/tools/kalkulator-bmi/index.html
+++ b/tools/tools/kalkulator-bmi/index.html
@@ -18,7 +18,7 @@
           <nav>
               <ul>
                   <li><a href="../">Home</a></li>
-                  <li><a href="#" class="active">Tools</a></li>
+                  <li><a href="../" class="active">Tools</a></li>
                   <li><a href="../convert/">Convert</a></li>
                   <li><a href="../about/">About</a></li>
               </ul>
